<resources>
    <string name="app_name">Catchphrase</string>
    <string name="main_title">catch\nphrase</string>
    <string name="string_start">Start</string>
    <string name="string_correct">Correct!</string>
    <string name="string_endround">End round</string>
    <string name="string_endgame">End game</string>
    <string name="string_skip">Skip</string>
    <string name="string_new">New game</string>
    <string name="string_exit">Back to menu</string>
    <string name="string_easy">Easy</string>
    <string name="string_medium">Medium</string>
    <string name="string_hard">Hard</string>
    <string name="string_adventist">Adventist</string>
    <string name="string_team1">Team 1</string>
    <string name="string_team2">Team 2</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
