<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfetti_spout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/button_correct"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/neon_button_primary"
        android:textColor="@drawable/neon_button_text_primary"
        android:onClick="buttonCorrect"
        android:text="@string/string_correct"
        app:layout_constraintTop_toBottomOf="@id/text_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_endround"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_endround"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/neon_button_highlight"
        android:textColor="@drawable/neon_button_text_highlight"
        android:onClick="buttonEndRound"
        android:text="@string/string_endround"
        app:layout_constraintTop_toBottomOf="@id/text_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_skip"
        app:layout_constraintStart_toEndOf="@id/button_correct" />

    <Button
        android:id="@+id/button_endgame"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/neon_button_accent"
        android:textColor="@drawable/neon_button_text_accent"
        android:onClick="buttonEndGame"
        android:text="@string/string_endgame"
        app:layout_constraintTop_toBottomOf="@id/text_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_skip"
        app:layout_constraintStart_toEndOf="@id/button_correct" />

    <Button
        android:id="@+id/button_skip"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/neon_button_primary"
        android:textColor="@drawable/neon_button_text_primary"
        android:onClick="buttonSkip"
        android:text="@string/string_skip"
        app:layout_constraintTop_toBottomOf="@id/text_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_endround" />

    <Button
        android:id="@+id/button_new"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/neon_button_highlight"
        android:onClick="buttonNew"
        android:text="@string/string_new"
        android:textColor="@drawable/neon_button_text_highlight"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_timer" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/neon_button_accent"
        android:onClick="buttonExit"
        android:text="@string/string_exit"
        android:textColor="@drawable/neon_button_text_accent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_new"
        app:layout_constraintTop_toBottomOf="@+id/text_timer" />

    <TextView
        android:id="@+id/text_word"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="96sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_timer"
        android:visibility="invisible"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_score1"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_score2"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_team1"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/string_team1"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/text_score1"
        app:layout_constraintStart_toEndOf="@+id/text_score1"
        app:layout_constraintTop_toTopOf="@id/text_score1" />

    <TextView
        android:id="@+id/text_team2"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/string_team2"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/text_score2"
        app:layout_constraintEnd_toStartOf="@+id/text_score2"
        app:layout_constraintTop_toTopOf="@id/text_score2" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/neon_button_primary"
        android:textColor="@drawable/neon_button_text_primary"
        android:onClick="buttonStart"
        android:text="@string/string_start"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_word"
        app:layout_constraintEnd_toEndOf="@+id/text_word"
        app:layout_constraintStart_toStartOf="@+id/text_word"
        app:layout_constraintTop_toTopOf="@+id/text_word" />

</androidx.constraintlayout.widget.ConstraintLayout>