<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="341dp"
        android:layout_height="240dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_easy"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/neon_button_primary"
        android:textColor="@drawable/neon_button_text_primary"
        android:onClick="startEasy"
        android:text="@string/string_easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_medium"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/neon_button_highlight"
        android:textColor="@drawable/neon_button_text_highlight"
        android:onClick="startMedium"
        android:text="@string/string_medium"
        app:layout_constraintBottom_toTopOf="@+id/button_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_easy" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/neon_button_accent"
        android:textColor="@drawable/neon_button_text_accent"
        android:layout_marginBottom="16dp"
        android:onClick="startHard"
        android:text="@string/string_hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>